leptos_macro/tests/view/42_multiple_missing_required_props.stderr
error[E0277]: missing required prop `concrete_i32` on component `Inner`
  --> tests/view/42_multiple_missing_required_props.rs:10:14
   |
10 |             <Inner/>
   |              ^^^^^ missing prop `concrete_i32`
   |
   = help: the trait `__required_Inner_concrete_i32` is not implemented for `()`
   = note: all required props must be provided as attributes on the component
help: the trait `__required_Inner_concrete_i32` is implemented for `(__T,)`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<((), (), ())>` to implement `Inner::__CheckPresence`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: missing required prop `generic_fun` on component `Inner`
  --> tests/view/42_multiple_missing_required_props.rs:10:14
   |
10 |             <Inner/>
   |              ^^^^^ missing prop `generic_fun`
   |
   = help: the trait `__required_Inner_generic_fun` is not implemented for `()`
   = note: all required props must be provided as attributes on the component
help: the trait `__required_Inner_generic_fun` is implemented for `(__T,)`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<((), (), ())>` to implement `Inner::__CheckPresence`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: missing required prop `children` on component `Inner`
  --> tests/view/42_multiple_missing_required_props.rs:10:14
   |
10 |             <Inner/>
   |              ^^^^^ missing prop `children`
   |
   = help: the trait `__required_Inner_children` is not implemented for `()`
   = note: all required props must be provided as attributes on the component
help: the trait `__required_Inner_children` is implemented for `(__T,)`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<((), (), ())>` to implement `Inner::__CheckPresence`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<((), (), ())>`, but its trait bounds were not satisfied
  --> tests/view/42_multiple_missing_required_props.rs:10:14
   |
10 |             <Inner/>
   |              ^^^^^
...
15 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `(): __required_Inner_children`
      `(): __required_Inner_concrete_i32`
      `(): __required_Inner_generic_fun`
  --> tests/view/42_multiple_missing_required_props.rs:15:1
   |
15 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
